--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,7 +14,7 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d2r9hn1obbkp2q.cloudfront.net/J7kxKD4Jg"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d124e4v75n9sum.cloudfront.net/R2qxKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普：可能从2月1日起对墨西哥和加拿大征收关税</h2>
 <p>美国总统川普表示，他认为，可能会在2月1日对加拿大和墨西哥征收新的关税。</p>
@@ -316,7 +316,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416562.md#1">韩国瑜率台湾代表团 赴美出席川普就职典礼</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/30/n10752312.md#1" target="_blank">谭松：一个被摧折了“阳根”的老地主</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/23/n11405058.md#1" target="_blank">生死劫后 中共酷刑幸存者吁中国人了解真相</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/4/n11363603.md#1" target="_blank">响彻在世界政坛的正义之声（上）</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
