--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -3,9 +3,9 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【更新】川普入主白宫 再签一轮行政令</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14418472-GettyImages-2194443918-600x400.jpg" />///image2=```diff
-- 2025年1月20日，川普在白宫椭圆办公室首次亮相，并借此再签署一轮行政令。即将上任的白宫幕僚长苏西·怀尔斯（Susie Wiles）正观看川普向记者发言。 (JIM WATSON/POOL/AFP via Getty Images)
+- 2025年1月20日，川普在白宫椭圆办公室首次亮相，并借此再签署一轮行政令。 (JIM WATSON/POOL/AFP via Getty Images)
 ```
-<h6>2025年1月20日，川普在白宫椭圆办公室首次亮相，并借此再签署一轮行政令。即将上任的白宫幕僚长苏西·怀尔斯（Susie Wiles）正观看川普向记者发言。 (JIM WATSON/POOL/AFP via Getty Images)
+<h6>2025年1月20日，川普在白宫椭圆办公室首次亮相，并借此再签署一轮行政令。 (JIM WATSON/POOL/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2025年01月19日讯】（大纪元记者李言、张婷、林燕、陈霆综合报导）第47任美国总统唐纳德?川普（特朗普）于周一（1月20日）举行就职典礼。川普在就职演说中阐述了未来4年的愿景，并强调说，他将“成为所有美国人民的总统”。</p>
@@ -14,8 +14,23 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d124e4v75n9sum.cloudfront.net/R2qxKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d53tcmkdq4r1q.cloudfront.net/H2ixKD4Jm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>川普将TikTok禁令推迟75天</h2>
+<p>正如周日承诺的，川普周一签署了一项行政令，将TikTok禁令的执行推迟75天。</p>
+<p>该法案在国会两党的支持下获得通过，并在去年4月由前总统拜登签署。该法规定，自1月19日起，除非中国母公司字节跳动（ByteDance）向美国或其盟国的买家出售TikTok的美国业务，否则将在美国境内遭到禁止。</p>
+<p>法律赋予总统广泛的自由裁量权来决定如何执行禁令。但是，TikTok在美国的最终命运仍然悬而未决。</p>
+<p>目前还不清楚，即使川普介入，ByteDance是否愿意出售给买家。如果ByteDance有意出售，不知是否会得到北京批准。此前，中共当局曾禁止ByteDance让出TikTok算法的控制权，将其视为机密，从而有效禁止了TikTok出售。</p>
+<p>“记住，TikTok在很大程度上是关于孩子们的，年轻的孩子们。如果中国（中共）要从中获取有关年轻孩子的信息。老实说，我认为我们有比这更大的问题。”川普在椭圆办公室说道。</p>
+<p>他还告诉记者，他在TikTok上签署的协议，赋予了他“不卖就关闭”（sell it or close it）的权利。</p>
+<p>川普说：“如果不卖，我有权关闭它，我们会做出这样的决定。”</p>
+<p>川普还说，美国应拥有TikTok的一半股份，他估计TikTok的价值可达1万亿美元。</p>
+<h2>川普计划与普京会面 尽快结束俄乌战</h2>
+<p>川普表示，一旦做好安排，他计划与俄罗斯总统普京（Vladimir Putin）会面，并补充说目前会谈的相关安排已经在进行。</p>
+<p>“大多数人都认为那场战争会在一周内结束”，川普在谈到俄罗斯对乌克兰近3年的战争时说，“我认为他会很好地结束那场战争”。</p>
+<p>川普说，他认为乌克兰总统泽连斯基也希望达成协议结束冲突。</p>
+<p>“我们要尽快结束它”，他在椭圆办公室对记者说，“你知道，乌克兰和俄罗斯的战争根本就不应该开始。”</p>
+<p>国务卿卢比奥（Marco Rubio）周一早先表示，他无法为结束俄乌战争设定时间表，但他告诉记者，双方都必须作出一些让步，这是解决任何冲突所必须的。同时，卢比奥也承认俄罗斯是“侵略者”。</p>
 <h2>川普：可能从2月1日起对墨西哥和加拿大征收关税</h2>
 <p>美国总统川普表示，他认为，可能会在2月1日对加拿大和墨西哥征收新的关税。</p>
 <p>他在椭圆办公室告诉记者，他考虑对来自美国北美邻国的进口产品征收25%的关税。</p>
@@ -309,14 +324,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378927.md#1">白宫：拜登总统将出席川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411621.md#1">澳外长受邀参加美总统川普就职典礼</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416562.md#1">韩国瑜率台湾代表团 赴美出席川普就职典礼</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/18/n10859288.md#1" target="_blank">慧勉：古代官员善心理政故事数则</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/4/n11363603.md#1" target="_blank">响彻在世界政坛的正义之声（上）</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
